force-app/main/default/objects/Membership_Contract__c/fields/Pref_Platform_Calls__c.field-meta.xml
<CustomField>
    <fullName>Pref_Platform_Calls__c</fullName>
    <description
  >Used to indicate account&apos;s preferred platform for calls. Included in delivery routings and projects.</description>
    <formula
  >TEXT( Membership_Name__r.Account_Name__r.Pref_Platform_Calls__c )</formula>
    <inlineHelpText
  >This account&apos;s preferred platform for calls. Can be changed on the account page.</inlineHelpText>
    <label>Pref Platform (Calls)</label>
    <type>Text</type>
</CustomField>