force-app/main/default/objects/Membership_Contract__c/fields/Prior_Renewal_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Prior_Renewal_Assessment__c</fullName>
    <description
  >The prior Renewal Assessment value, pushed by a flow if changed.</description>
    <label>Prior Renewal Assessment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>