force-app/main/default/objects/Membership_Contract__c/fields/Promo_Access_End__c.field-meta.xml
<CustomField>
    <fullName>Promo_Access_End__c</fullName>
    <label>Promo Access End</label>
    <type>Date</type>
</CustomField>