force-app/main/default/objects/Membership_Contract__c/fields/Promo_Access_Start__c.field-meta.xml
<CustomField>
    <fullName>Promo_Access_Start__c</fullName>
    <label>Promo Access Start</label>
    <type>Date</type>
</CustomField>