force-app/main/default/objects/Membership_Contract__c/fields/Promo_Access_Status__c.field-meta.xml
<CustomField>
    <fullName>Promo_Access_Status__c</fullName>
    <formula>IF(Promo_Access_Start__c  &gt; TODAY(), &quot;Not Started&quot;,
IF(Promo_Access_End__c &gt;= TODAY(), &quot;Active&quot;, 
IF(Promo_Access_End__c &lt; TODAY(),&quot;Expired&quot;, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Access Status</label>
    <type>Text</type>
</CustomField>