force-app/main/default/objects/Membership_Contract__c/fields/Promo_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Promo_Access_Type__c</fullName>
    <label>Promo Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Additional Month(s)</fullName>
            </value>
            <value>
                <fullName>Intent Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>