force-app/main/default/objects/Membership_Contract__c/fields/Renewal_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Assessment__c</fullName>
    <inlineHelpText
  >Used to assess the probability of the membership being renewed.</inlineHelpText>
    <label>Renewal Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Danger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>