force-app/main/default/objects/Membership_Contract__c/fields/Renewal_Assessment_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Assessment_Last_Updated__c</fullName>
    <label>Renewal Assessment Last Updated</label>
    <type>DateTime</type>
</CustomField>