force-app/main/default/objects/Membership_Contract__c/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Renewed with Upgrade</fullName>
            </value>
            <value>
                <fullName>Renewed with Downgrade</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
                <isActive>false</isActive>
                <label>Merged</label>
            </value>
            <value>
                <fullName>Upgraded - Expired</fullName>
                <isActive>false</isActive>
                <label>Upgraded - Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>