force-app/main/default/objects/Membership_Contract__c/fields/Renewal_Window_60_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Window_60_Days__c</fullName>
    <formula>IF(
NOT(
ISBLANK(End_Date__c)
),
End_Date__c + 60,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >End Date + 60 days for renewal window on all membership types (confirmed as of 01/03/24)</inlineHelpText>
    <label>Renewal Window (60)</label>
    <type>Date</type>
</CustomField>