force-app/main/default/objects/Membership_Contract__c/fields/Renewed__c.field-meta.xml
<CustomField>
    <fullName>Renewed__c</fullName>
    <description
  >1 if Renewal Status value is a renewed value, 0 if not.</description>
    <formula>CASE(
TEXT(Renewal_Status__c),
&quot;Renewed&quot;, 1,
&quot;Renewed with Upgrade&quot;, 1,
&quot;Renewed with Downgrade&quot;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>