force-app/main/default/objects/Membership_Contract__c/fields/Renewed_Membership__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed Membership</label>
    <referenceTo>Membership_Contract__c</referenceTo>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>