force-app/main/default/objects/Membership_Contract__c/fields/Renewed_Membership_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Membership_Renewal_Status__c</fullName>
    <formula>TEXT(Renewed_Membership__r.Renewal_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Membership Renewal Status</label>
    <type>Text</type>
</CustomField>