force-app/main/default/objects/Membership_Contract__c/fields/Sales_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Email__c</fullName>
    <formula>Sales_Admin__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Admin Email</label>
    <type>Text</type>
</CustomField>