force-app/main/default/objects/Membership_Contract__c/fields/Sales_Admin_Ext__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Ext__c</fullName>
    <formula>Sales_Admin__r.Extension</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Admin Ext</label>
    <type>Text</type>
</CustomField>