force-app/main/default/objects/Membership_Contract__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <formula>Membership_Name__r.Account_Name__r.Sales_Team_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>