force-app/main/default/objects/Membership_Contract__c/fields/Stage_Hidden_formula__c.field-meta.xml
<CustomField>
    <fullName>Stage_Hidden_formula__c</fullName>
    <formula>case( Stage__c ,
&quot;Not Started&quot;, &quot;Not Started&quot;,
&quot;Completed&quot;, &quot;Completed&quot;,
&quot;Canceled&quot;, &quot;Cancelled&quot;,
&quot;In Progress&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage (Hidden formula)</label>
    <type>Text</type>
</CustomField>