force-app/main/default/objects/Membership_Contract__c/fields/Start_Date_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_90_Days__c</fullName>
    <formula>IF(
  NOT(
    ISBLANK(Start_Date__c)
  ),
  Start_Date__c + 90,
  null
)</formula>
    <label>Start Date+90 Days</label>
    <type>Date</type>
</CustomField>