force-app/main/default/objects/Membership_Contract__c/fields/Start_Date_Formula_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Formula_Year__c</fullName>
    <formula>Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Date</type>
</CustomField>