force-app/main/default/objects/Membership_Contract__c/fields/Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Month__c</fullName>
    <formula>CASE(MONTH(  Start_Date__c  ),
1, &quot;01-Jan&quot;,
2, &quot;02-Feb&quot;,
3, &quot;03-Mar&quot;,
4, &quot;04-Apr&quot;,
5, &quot;05-May&quot;,
6, &quot;06-June&quot;,
7, &quot;07-July&quot;,
8, &quot;08-Aug&quot;,
9, &quot;09-Sept&quot;,
10, &quot;10-Oct&quot;,
11, &quot;11-Nov&quot;,
12, &quot;12-Dec&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Month</label>
    <type>Text</type>
</CustomField>