force-app/main/default/objects/Membership_Contract__c/fields/Start_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Start_Quarter__c</fullName>
    <formula
  >&quot;Q&quot;&amp;TEXT(CEILING( MONTH (  Start_Date__c  ) / 3 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Quarter</label>
    <type>Text</type>
</CustomField>