force-app/main/default/objects/Membership_Contract__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <label>Total Income</label>
    <summarizedField
  >Membership_Income_Schedule_Item__c.Income__c</summarizedField>
    <summaryForeignKey
  >Membership_Income_Schedule_Item__c.Membership_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>