force-app/main/default/objects/Membership_Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEN</fullName>
            </value>
            <value>
                <fullName>DGN</fullName>
            </value>
            <value>
                <fullName>ICA</fullName>
            </value>
            <value>
                <fullName>ITX</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>CJIS Council</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Council</fullName>
            </value>
            <value>
                <fullName>DC Large City County</fullName>
            </value>
            <value>
                <fullName>Digital States</fullName>
            </value>
            <value>
                <fullName>Future of Data</fullName>
            </value>
            <value>
                <fullName>GE Council</fullName>
            </value>
            <value>
                <fullName>HE CIO</fullName>
                <label>HE Council</label>
            </value>
            <value>
                <fullName>HE AI Council</fullName>
            </value>
            <value>
                <fullName>K-12 Council</fullName>
            </value>
            <value>
                <fullName>MaaS</fullName>
            </value>
            <value>
                <fullName>IFL</fullName>
                <isActive>false</isActive>
                <label>IFL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>