force-app/main/default/objects/Membership_Contract__c/fields/Upgrade_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Amount__c</fullName>
    <inlineHelpText
  >Upgrade amount applied mid-contract due to a level increase, or applied at renewal when upgrading at the time of renewal.</inlineHelpText>
    <label>Upgrade Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>