force-app/main/default/objects/Membership_Contract__c/fields/Upgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Date__c</fullName>
    <inlineHelpText
  >Date when the upgrade was processed on the Membership Contract record.</inlineHelpText>
    <label>Upgrade Date</label>
    <type>Date</type>
</CustomField>