force-app/main/default/objects/Membership_Contract__c/fields/Upgrade_Level__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Level__c</fullName>
    <label>Upgrade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>