force-app/main/default/objects/Membership_Contract__c/fields/Upgrade_Type__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Type__c</fullName>
    <inlineHelpText
  >Used to track what type of upgrade occurred on Membership Contract.</inlineHelpText>
    <label>Upgrade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-Contract</fullName>
            </value>
            <value>
                <fullName>Renewed with Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>