force-app/main/default/objects/Membership_Contract__c/fields/Upgraded_Mid_Contract__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_Mid_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mid-Contract Change</label>
    <type>Checkbox</type>
</CustomField>