force-app/main/default/objects/Membership_Contract__c/fields/View_Insider_Opps__c.field-meta.xml
<CustomField>
    <fullName>View_Insider_Opps__c</fullName>
    <description
  >Fills the Delivery Contract&apos;s Account ID into the Insider Opps report link for a dynamic report link from another report.</description>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O5Y00000DvaFRUAZ/view?fv0=&quot;&amp; Delivery_Contract__r.AccountId ,&quot;Insider Opps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Insider Opps</label>
    <type>Text</type>
</CustomField>