force-app/main/default/objects/Membership_Contract__c/fields/View_Nav_Opps__c.field-meta.xml
<CustomField>
    <fullName>View_Nav_Opps__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O1O0000086h8BUAQ/view?fv0=&quot;&amp; Delivery_Contract__r.AccountId ,&quot;Navigator Opps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Nav Opps</label>
    <type>Text</type>
</CustomField>