force-app/main/default/objects/Membership_Contract__c/fields/Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Yesterday__c</fullName>
    <description>Shows yesterday&apos;s date. Used in Flows.</description>
    <formula>TODAY()-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows yesterday&apos;s date. Used in Flows.</inlineHelpText>
    <label>Yesterday</label>
    <type>Date</type>
</CustomField>