force-app/main/default/objects/Membership_Contract__c/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <label>Subscription</label>
</RecordType>