force-app/main/default/objects/Membership_Contract__c/validationRules/Expiration_Risk_Reason_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Risk_Reason_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Expiration_Risk_Reason__c)
&amp;&amp;
Expiration_Risk_Other__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Expiration_Risk_Other__c</errorDisplayField>
    <errorMessage
  >Please provide additional details for Risk or Danger Renewal Assessment.</errorMessage>
</ValidationRule>