force-app/main/default/objects/Membership_Contract__c/validationRules/Promo_Access_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Promo_Access_Dates_Required</fullName>
    <active>true</active>
    <description
  >When Promo Access Type is filled in, Promo Access Start and Promo Access End fields are required.</description>
    <errorConditionFormula>AND(
(NOT(ISBLANK(TEXT(Promo_Access_Type__c)))),
((ISBLANK(Promo_Access_Start__c))||
(ISBLANK(Promo_Access_End__c))))</errorConditionFormula>
    <errorMessage
  >Must add Promo Access Start and Promo Access End dates</errorMessage>
</ValidationRule>