force-app/main/default/objects/Membership_Contract__c/validationRules/Renewal_Assessment_Risk_or_Danger.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Assessment_Risk_or_Danger</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISPICKVAL( Renewal_Assessment__c , &quot;Danger&quot;),
ISPICKVAL( Renewal_Assessment__c , &quot;Risk&quot;)
)
&amp;&amp;
ISPICKVAL(Expiration_Risk_Reason__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Expiration_Risk_Reason__c</errorDisplayField>
    <errorMessage
  >Please provide a reason for the Risk or Danger Renewal Assessment.</errorMessage>
</ValidationRule>