force-app/main/default/objects/Membership_Contract__c/validationRules/Stage_Completed_Missing_Renewal_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Completed_Missing_Renewal_Status</fullName>
    <active>true</active>
    <description
  >Stage as &quot;Completed&quot; requires a value in Renewal Status field.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Stage__c , &quot;Completed&quot;),
ISPICKVAL( Renewal_Status__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Renewal_Status__c</errorDisplayField>
    <errorMessage
  >Renewal Status field required when Stage is &quot;Completed&quot;</errorMessage>
</ValidationRule>