force-app/main/default/objects/Membership_Contract__c/listViews/Memberships_Contracts_Extended.listView-meta.xml
<ListView>
    <fullName>Memberships_Contracts_Extended</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>End_Date__c</columns>
    <columns>Extended_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Level__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Renewal_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Membership_Contract__c.Membership</value>
    </filters>
    <filters>
        <field>Renewal_Status__c</field>
        <operation>equals</operation>
        <value>Extended</value>
    </filters>
    <label>Memberships Contracts - Extended</label>
</ListView>