force-app/main/default/objects/Membership_Contract__c/listViews/Memberships_Contracts_NAV_Active.listView-meta.xml
<ListView>
    <fullName>Memberships_Contracts_NAV_Active</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>End_Date__c</columns>
    <columns>Extended_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Level__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Renewal_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Renewed_Membership_Renewal_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>DEN,DGN</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Not Started,Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Membership_Contract__c.Membership</value>
    </filters>
    <label>Memberships Contracts - NAV - Active</label>
</ListView>