force-app/main/default/objects/Membership_Contract__c/listViews/Memberships_Contracts_Program_Active.listView-meta.xml
<ListView>
    <fullName>Memberships_Contracts_Program_Active</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Extended_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Level__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Renewal_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Not Started,Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Membership_Contract__c.Program</value>
    </filters>
    <label>Memberships Contracts - Program - Active</label>
</ListView>